--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,7 +11,8 @@
 
     <!-- Insert Your Form Below -->
     <form>
-      <input type="text">
+      <p>Your name: <input type="text"></p>
+      <p>Your Favorite Food: <input type="text"></p>
       <submit type="submit">
     </form>
 
