--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,8 +11,8 @@
 
     <!-- Insert Your Form Below -->
     <form method="POST" action="/food>
-      <p>Your name: <input type="text"></p>
-      <p>Your Favorite Food: <input type="text"></p>
+      <p>Your name: <input type="text" name="name"></p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
       <submit type="submit">
     </form>
 
